tests/fsharp/typecheck/sigs/neg59.bsl

neg59.fs(9,13,9,17): typecheck error FS3096: 'join' must be followed by a variable name. Usage: join var in collection on (outerKey = innerKey). Note that parentheses are required after 'on'.

neg59.fs(9,39,9,40): typecheck error FS0039: The value or constructor 'j' is not defined.

neg59.fs(10,24,10,25): typecheck error FS0039: The value or constructor 'j' is not defined.

neg59.fs(15,13,15,22): typecheck error FS3096: 'groupJoin' must be followed by a variable name. Usage: groupJoin var in collection on (outerKey = innerKey) into group. Note that parentheses are required after 'on'.

neg59.fs(15,44,15,45): typecheck error FS0039: The value or constructor 'j' is not defined.

neg59.fs(25,23,25,40): typecheck error FS3147: This 'let' definition may not be used in a query. Only simple value definitions may be used in queries.

neg59.fs(31,23,31,24): typecheck error FS3147: This 'let' definition may not be used in a query. Only simple value definitions may be used in queries.

neg59.fs(36,23,36,40): typecheck error FS3147: This 'let' definition may not be used in a query. Only simple value definitions may be used in queries.

neg59.fs(42,23,42,24): typecheck error FS3147: This 'let' definition may not be used in a query. Only simple value definitions may be used in queries.

neg59.fs(49,15,49,27): typecheck error FS3090: An if/then/else expression may not be used within queries. Consider using either an if/then expression, or use a sequence expression instead.

neg59.fs(56,15,56,27): typecheck error FS3090: An if/then/else expression may not be used within queries. Consider using either an if/then expression, or use a sequence expression instead.

neg59.fs(63,15,63,20): typecheck error FS3163: 'match' expressions may not be used in queries

neg59.fs(69,15,69,20): typecheck error FS3163: 'match' expressions may not be used in queries

neg59.fs(76,15,76,18): typecheck error FS3146: 'try/with' expressions may not be used in queries

neg59.fs(82,15,82,18): typecheck error FS3146: 'try/with' expressions may not be used in queries

neg59.fs(89,15,89,18): typecheck error FS3141: 'try/finally' expressions may not be used in queries

neg59.fs(95,15,95,18): typecheck error FS3141: 'try/finally' expressions may not be used in queries

neg59.fs(102,15,102,64): typecheck error FS3142: 'use' expressions may not be used in queries

neg59.fs(108,15,108,64): typecheck error FS3142: 'use' expressions may not be used in queries

neg59.fs(113,15,113,25): typecheck error FS3140: 'while' expressions may not be used in queries

neg59.fs(118,15,118,25): typecheck error FS3140: 'while' expressions may not be used in queries

neg59.fs(124,17,124,25): typecheck error FS3144: 'return' and 'return!' may not be used in queries

neg59.fs(128,17,128,26): typecheck error FS3144: 'return' and 'return!' may not be used in queries
